# Memories-API

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  mcp_server.py  schemas.py  storage.py
docs/: data_object_schema.md
src/: main.py
tests/: conftest.py  test_memories.py
tests/contract/: test_http_contract.py  test_mcp_contract.py
tests/helpers/: database_helpers.py  memory_builders.py
tests/integration/: test_memories_batch.py  test_memories_create.py  test_memories_delete.py  test_memories_detail.py  test_memories_list.py  test_memories_path_params.py  test_memories_search.py  test_memories_update.py
tests/unit/: test_config.py  test_mcp_server.py  test_schemas.py  test_storage.py
