[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memories-api"
version = "0.1.0"
description = "A small FastAPI project for storing memories with tags in a JSON database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.5",
    "httpx==0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]