[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memories-api"
version = "0.1.0"
description = "A small FastAPI project for storing memories with tags in a JSON database."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "mcp==1.9.4",
    "uvicorn==0.34.0",
]

[project.scripts]
memories-api-mcp = "app.mcp_server:run"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.5",
    "httpx==0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # allow long lines

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"